# website

./: 404.html  CNAME  _quarto.yml  about.html  about.qmd  index.html  index.qmd  justfile  listings.json  posts.html  posts.qmd  posts.xml  pyproject.toml  readme.html  readme.md  robots.txt  search.json  sitemap.xml
.github/workflows/: cicd.yaml
_freeze/posts/fast-simple-state/index/execute-results/: html.json
_freeze/posts/sqlite-in-sqlite/index/execute-results/: html.json
posts/fast-simple-python/: index.html  index.qmd
posts/fast-simple-state/: index.html  index.qmd  requirements.txt
posts/open-cli/: index.html  index.qmd
posts/pawz/: index.html  index.qmd
posts/sqlite-in-sqlite/: index.html  index.qmd
posts/testing/: index.html  index.qmd
posts/what-is-dkdc/: index.html  index.qmd
posts/when-dbt-clicked-for-me/: index.qmd
site_libs/bootstrap/: bootstrap-1c5fe9fe315a412dbd13bb549cbb4245.min.css  bootstrap-83fb7be67a479d1e28f17932b7297160.min.css
src/website/: utils.py
